--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <div id="wrap">
       <h3>Score:<span id="result"></span></h3>
       <div>
-        <button>2x2</button>
-        <button>3x3</button>
-        <button>4x4</button>
+        <button class="count-btn active" data-id="4">2x4</button>
+        <button class="count-btn" data-id="6">3x4</button>
+        <button class="count-btn" data-id="8">4x4</button>
+        <button id="reset">reset</button>
       </div>
       <div class="grid">
       </div>
