--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div id="container">
     <h2>같은 그림 찾기 게임</h2>
     <div id="wrap">
-      <h3>Score:<span id="result"></span></h3>
-      <div>
+      <h3>Score: <span id="result"></span></h3>
+      <div class="btn-box">
         <button class="count-btn active" data-id="4">2x4</button>
         <button class="count-btn" data-id="6">3x4</button>
         <button class="count-btn" data-id="8">4x4</button>
